--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aishwarya Nayak | AI Engineer Portfolio</title>
+    <title>Aishwarya Nayak | Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
     <style>
+        /* Base visuals */
         .glass-effect { background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2); }
         .animated-bg { background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); background-size: 400% 400%; animation: gradient 15s ease infinite; }
         @keyframes gradient { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
-        .project-card { transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1); }
-        .project-card:hover { transform: translateY(-10px) scale(1.02); box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1); }
         .scroll-reveal { opacity: 0; transform: translateY(20px); transition: all 0.6s ease-out; }
         .scroll-reveal.visible { opacity: 1; transform: translateY(0); }
         .floating { animation: floating 3s ease-in-out infinite; }
         @keyframes floating { 0% { transform: translateY(0px); } 50% { transform: translateY(-10px); } 100% { transform: translateY(0px); } }
-        .skill-tags { display: flex; flex-wrap: wrap; gap: 0.5rem; margin-top: auto; }
-        .skill-tags span { white-space: nowrap; }
-        .divider { width: 80px; height: 4px; border-radius: 9999px; margin: 0.75rem auto 0; }
+
+        /* Colorful section backgrounds */
+        .bg-about { background: linear-gradient(135deg, #0f172a 0%, #1e293b 40%, #0b1220 100%); }
+        .bg-experience { background: radial-gradient(1200px 600px at 10% 10%, rgba(126,34,206,0.25), transparent 60%), radial-gradient(900px 500px at 90% 30%, rgba(14,165,233,0.2), transparent 60%), #0b0f1a; }
+        .bg-skills { background: linear-gradient(135deg, #0b1220 0%, #0f172a 50%, #111827 100%); }
+
+        /* Decorative divider & accents */
+        .divider { width: 84px; height: 4px; border-radius: 9999px; margin: 0.75rem auto 0; background: linear-gradient(90deg,#60a5fa,#a78bfa,#f472b6); }
+        .card { box-shadow: 0 10px 30px rgba(0,0,0,0.25); }
+        .skill-card { transition: transform 200ms ease, box-shadow 200ms ease; background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border: 1px solid rgba(255,255,255,0.08); }
+        .skill-card:hover { transform: translateY(-3px); box-shadow: 0 12px 24px rgba(0,0,0,0.35); }
+
         /* Mobile refinements */
         html { -webkit-text-size-adjust: 100%; }
         .safe-container { scroll-margin-top: 96px; }
@@ -50,14 +58,15 @@
     </header>
 
     <!-- ABOUT -->
-    <section id="about" class="safe-container py-20 sm:py-24 md:py-32 px-4 bg-gray-800">
+    <section id="about" class="safe-container py-20 sm:py-24 md:py-32 px-4 bg-about">
         <div class="max-w-4xl mx-auto scroll-reveal">
-            <h2 class="text-3xl sm:text-4xl font-bold text-center mb-10 sm:mb-12">About Me</h2>
-            <div class="glass-effect p-6 sm:p-8 rounded-2xl space-y-5 sm:space-y-6">
-                <p class="text-gray-300 text-base sm:text-lg leading-relaxed truncate-wrap">
+            <h2 class="text-3xl sm:text-4xl font-bold text-center mb-2 text-blue-300">About Me</h2>
+            <div class="divider"></div>
+            <div class="glass-effect p-6 sm:p-8 rounded-2xl space-y-5 sm:space-y-6 card mt-8">
+                <p class="text-gray-200 text-base sm:text-lg leading-relaxed truncate-wrap">
                     I’m an early-career <strong>AI Engineer</strong> with a solid foundation in software and data engineering (SUNY Buffalo – <strong>MS Data Science</strong>). I build practical AI features on top of reliable data pipelines—focusing on <strong>prompt design</strong>, <strong>retrieval-augmented generation (RAG)</strong>, and <strong>model evaluation</strong>. Recently, I’ve contributed to applied AI work at <strong>Reality AI Lab</strong> (LLM workflows) and <strong>Handshake / Project Canary</strong> (vision-focused model evaluation & image annotation).
                 </p>
-                <ul class="list-disc list-inside leading-relaxed text-gray-300 space-y-2 text-base sm:text-lg">
+                <ul class="list-disc list-inside leading-relaxed text-gray-200 space-y-2 text-base sm:text-lg">
                     <li><strong>AI Engineering:</strong> Prompt engineering, lightweight RAG, and systematic evaluation.</li>
                     <li><strong>Backend & Data:</strong> Python/Scala services, ETL/ELT, SQL modeling; containerization and CI/CD on GCP.</li>
                     <li><strong>Soft Skills:</strong> Strong communication, structured problem-solving, and effective cross-team collaboration.</li>
@@ -67,53 +76,54 @@
     </section>
 
     <!-- EXPERIENCE -->
-    <section id="experience" class="safe-container py-20 sm:py-24 md:py-32 px-4 bg-gray-900">
+    <section id="experience" class="safe-container py-20 sm:py-24 md:py-32 px-4 bg-experience">
         <div class="max-w-5xl mx-auto">
-            <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12">Experience</h2>
-            <div class="space-y-6 sm:space-y-8">
+            <h2 class="text-3xl sm:text-4xl font-bold text-center mb-2 text-purple-300">Experience</h2>
+            <div class="divider"></div>
+            <div class="space-y-8 mt-8">
                 <!-- Handshake -->
-                <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal">
+                <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal card hover:shadow-2xl transition">
                     <div class="flex items-center justify-between flex-wrap gap-2">
-                        <h3 class="text-xl sm:text-2xl font-bold">Handshake – AI Engineer (Project Canary)</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold text-blue-200"><i class="fas fa-robot mr-2 text-blue-400"></i>Handshake – AI Engineer (Project Canary)</h3>
                         <span class="text-xs sm:text-sm text-gray-300">Sep 2025 – Present • Buffalo, NY</span>
                     </div>
-                    <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-300 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
+                    <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-200 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
                         <li>Evaluated <strong>200+ images</strong> for CV model quality; executed guideline-based checks and edge-case reviews.</li>
                         <li>Designed <strong>30+ prompts/test cases</strong> for visual tasks (incl. finite-automata diagrams) to stress-test outputs.</li>
                         <li>Standardized sourcing & evidence capture to improve reproducibility and auditability.</li>
                     </ul>
                 </div>
                 <!-- Reality AI Lab -->
-                <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal">
+                <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal card hover:shadow-2xl transition">
                     <div class="flex items-center justify-between flex-wrap gap-2">
-                        <h3 class="text-xl sm:text-2xl font-bold">Reality AI Lab – AI Engineer (Projects)</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold text-blue-200"><i class="fas fa-brain mr-2 text-pink-400"></i>Reality AI Lab – AI Engineer (Projects)</h3>
                         <span class="text-xs sm:text-sm text-gray-300">Mar 2025 – Present • Buffalo, NY</span>
                     </div>
-                    <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-300 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
+                    <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-200 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
                         <li>Built and iterated small <strong>LLM features</strong> (summarization/Q&A) using prompt templates and retrieval.</li>
                         <li>Created lean <strong>evaluation checklists</strong> (accuracy, faithfulness, style) with human-in-the-loop triage.</li>
                         <li>Integrated Python data prep with <strong>BigQuery</strong> artifacts to support retrieval and analytics.</li>
                     </ul>
                 </div>
                 <!-- Mocapay -->
-                <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal">
+                <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal card hover:shadow-2xl transition">
                     <div class="flex items-center justify-between flex-wrap gap-2">
-                        <h3 class="text-xl sm:text-2xl font-bold">Mocapay – Software/Data Engineer</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold text-blue-200"><i class="fas fa-database mr-2 text-green-400"></i>Mocapay – Software/Data Engineer</h3>
                         <span class="text-xs sm:text-sm text-gray-300">Aug 2021 – Jun 2023 • Delhi, IN</span>
                     </div>
-                    <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-300 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
+                    <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-200 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
                         <li>Developed <strong>5+</strong> Scala microservices; implemented <strong>Kafka</strong> pipelines and ETL for analytics.</li>
                         <li>Containerized and automated deployments with <strong>Docker</strong>, improving release reliability.</li>
                         <li>Partnered with stakeholders to deliver <strong>near‑real‑time</strong> dashboards and alerts.</li>
                     </ul>
                 </div>
                 <!-- TCS -->
-                <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal">
+                <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal card hover:shadow-2xl transition">
                     <div class="flex items-center justify-between flex-wrap gap-2">
-                        <h3 class="text-xl sm:text-2xl font-bold">TCS – Software Engineer</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold text-blue-200"><i class="fas fa-code mr-2 text-yellow-400"></i>TCS – Software Engineer</h3>
                         <span class="text-xs sm:text-sm text-gray-300">Jan 2020 – Jul 2021 • Indore, IN</span>
                     </div>
-                    <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-300 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
+                    <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-200 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
                         <li>Built data-driven modules with <strong>Java/SQL/AngularJS</strong> for finance reporting.</li>
                         <li>Contributed <strong>unit/integration tests</strong> and CI checks to improve code quality.</li>
                         <li>Supported stakeholders across <strong>3</strong> functional teams with ad-hoc analysis and fixes.</li>
@@ -124,33 +134,35 @@
     </section>
 
     <!-- SKILLS -->
-    <section id="skills" class="safe-container py-20 sm:py-24 md:py-32 px-4 bg-gray-900">
+    <section id="skills" class="safe-container py-20 sm:py-24 md:py-32 px-4 bg-skills">
         <div class="max-w-5xl mx-auto scroll-reveal">
-            <h2 class="text-3xl sm:text-4xl font-bold text-center mb-10 sm:mb-12">Top Skills</h2>
-            <div class="glass-effect p-6 sm:p-8 rounded-2xl">
+            <h2 class="text-3xl sm:text-4xl font-bold text-center mb-2 text-green-300">Top Skills</h2>
+            <div class="divider"></div>
+            <div class="glass-effect p-6 sm:p-8 rounded-2xl mt-8 card">
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 sm:gap-4 text-center">
-                    <div class="p-3 sm:p-4 rounded-xl bg-gray-800 skill-card">Python</div>
-                    <div class="p-3 sm:p-4 rounded-xl bg-gray-800 skill-card">SQL</div>
-                    <div class="p-3 sm:p-4 rounded-xl bg-gray-800 skill-card">Prompt Engineering</div>
-                    <div class="p-3 sm:p-4 rounded-xl bg-gray-800 skill-card">RAG</div>
-                    <div class="p-3 sm:p-4 rounded-xl bg-gray-800 skill-card">Model Evaluation</div>
-                    <div class="p-3 sm:p-4 rounded-xl bg-gray-800 skill-card">Spark</div>
-                    <div class="p-3 sm:p-4 rounded-xl bg-gray-800 skill-card">GCP</div>
-                    <div class="p-3 sm:p-4 rounded-xl bg-gray-800 skill-card">Docker</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fab fa-python mr-2"></i>Python</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-database mr-2"></i>SQL</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-terminal mr-2"></i>Prompt Engineering</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-search mr-2"></i>RAG</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-check-circle mr-2"></i>Model Evaluation</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-bolt mr-2"></i>Spark</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fab fa-google mr-2"></i>GCP</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fab fa-docker mr-2"></i>Docker</div>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- CONTACT -->
-    <section id="contact" class="safe-container py-20 sm:py-24 md:py-32 px-4 bg-gray-800">
+    <section id="contact" class="safe-container py-20 sm:py-24 md:py-32 px-4" style="background:linear-gradient(135deg,#111827 0%,#0b1220 50%,#1f2937 100%);">
         <div class="max-w-4xl mx-auto text-center scroll-reveal">
-            <h2 class="text-3xl sm:text-4xl font-bold mb-10 sm:mb-12">Get In Touch</h2>
-            <div class="glass-effect p-6 sm:p-8 rounded-2xl">
+            <h2 class="text-3xl sm:text-4xl font-bold mb-2 text-pink-300">Get In Touch</h2>
+            <div class="divider"></div>
+            <div class="glass-effect p-6 sm:p-8 rounded-2xl mt-8 card">
                 <p class="text-gray-300 mb-6 sm:mb-8 text-base sm:text-lg">Let’s connect to build impactful, reliable AI systems together.</p>
                 <a href="mailto:nayakaishwarya12@yahoo.in" class="inline-block bg-gradient-to-r from-blue-500 to-purple-600 text-white px-6 py-3 sm:px-8 sm:py-4 rounded-full font-semibold hover:opacity-90 transition-opacity w-full sm:w-auto">Contact Me</a>
                 <p class="mt-6 text-sm text-gray-400 flex items-center justify-center gap-6">
-                    <a href="https://www.linkedin.com/in/aishwarya-nayak-" target="_blank" class="inline-block mr-0 sm:mr-4"><i class="fab fa-linkedin fa-2x hover:text-blue-300"></i></a>
+                    <a href="https://www.linkedin.com/in/aishwarya-nayak-" target="_blank" class="inline-block"><i class="fab fa-linkedin fa-2x hover:text-blue-300"></i></a>
                     <a href="https://github.com/A1SHWARYANAYAK" target="_blank" class="inline-block"><i class="fab fa-github fa-2x hover:text-gray-400"></i></a>
                 </p>
             </div>
@@ -169,7 +181,6 @@
                 }
             });
         }, { threshold: 0.1 });
-
         document.querySelectorAll('.scroll-reveal').forEach((el) => observer.observe(el));
     </script>
 </body>
