--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <!-- Handshake -->
                 <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal card hover:shadow-2xl transition">
                     <div class="flex items-center justify-between flex-wrap gap-2">
-                        <h3 class="text-xl sm:text-2xl font-bold text-blue-200"><i class="fas fa-robot mr-2 text-blue-400" aria-hidden="true"></i>Handshake — Fellow / Independent Reviewer (AI)</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold text-blue-200"><i class="fas fa-robot mr-2 text-blue-400" aria-hidden="true"></i>Handshake — AI Engineer</h3>
                         <span class="text-xs sm:text-sm text-gray-300">2025 • Buffalo, NY</span>
                     </div>
                     <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-200 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
@@ -140,7 +140,6 @@
             <h2 class="text-3xl sm:text-4xl font-bold text-center mb-2 text-green-300">Top Skills</h2>
             <div class="divider"></div>
             <div class="glass-effect p-6 sm:p-8 rounded-2xl mt-8 card">
-                <p class="text-gray-300 mb-4 text-sm sm:text-base text-center">Focused, AI-forward stack (kept lean on purpose).</p>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 sm:gap-4 text-center">
                     <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fab fa-python mr-2" aria-hidden="true"></i>Python</div>
                     <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-code mr-2" aria-hidden="true"></i>FastAPI</div>
