--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                         <span class="text-xs sm:text-sm text-gray-300">2025 • Buffalo, NY</span>
                     </div>
                     <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-200 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
-                        <li>Designed <strong>text & multimodal reasoning</strong> tasks with unambiguous requirements and strict answer formats; wrote step-by-step solutions.</li>
-                        <li>Built <strong>eval/guardrail loops</strong> (multi-run checks, deterministic schemas, rubric-based error tags) to reduce variance and surface reasoning gaps.</li>
-                        <li>Reviewed peer prompts with a structured rubric to raise acceptance quality within <strong>tight, time-boxed cycles</strong>.</li>
+                      <li>Built <strong>evaluation & guardrail harnesses</strong> for multimodal tasks: deterministic answer schemas, multi-run checks, and rubric tagging to cut variance and shorten review loops.</li>
+                      <li>Designed and shipped <strong>prompt libraries & test cases</strong> (text + image) targeting reasoning failure modes; documented provenance and stepwise solutions for reproducibility.</li>
+                      <li>Prototyped <strong>agentic automations</strong> and <strong>RAG</strong> flows (n8n + pgvector) with metrics for task success, latency, and cost.</li>
                     </ul>
                 </div>
                 <!-- Reality AI Lab -->
