--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
                 <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal card hover:shadow-2xl transition">
                     <div class="flex items-center justify-between flex-wrap gap-2">
                         <h3 class="text-xl sm:text-2xl font-bold text-blue-200"><i class="fas fa-robot mr-2 text-blue-400" aria-hidden="true"></i>Handshake — AI Engineer</h3>
-                        <span class="text-xs sm:text-sm text-gray-300">2025 • Buffalo, NY</span>
+                        <span class="text-xs sm:text-sm text-gray-300">2025 - Present • Buffalo, NY</span>
                     </div>
                     <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-200 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
                       <li>Built <strong>evaluation & guardrail harnesses</strong> for multimodal tasks: deterministic answer schemas, multi-run checks, and rubric tagging to cut variance and shorten review loops.</li>
                       <li>Designed and shipped <strong>prompt libraries & test cases</strong> (text + image) targeting reasoning failure modes; documented provenance and stepwise solutions for reproducibility.</li>
-                      <li>Prototyped <strong>agentic automations</strong> and <strong>RAG</strong> flows (n8n + pgvector) with metrics for task success, latency, and cost.</li>
+                      <li>Prototyped <strong>agentic automations</strong> and <strong>RAG</strong> flows with metrics for task success, latency, and cost.</li>
                     </ul>
                 </div>
                 <!-- Reality AI Lab -->
@@ -103,7 +103,7 @@
                     <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-200 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
                         <li>Prototyped <strong>LLM features</strong> (summarization, Q&A) with prompt templates and retrieval; iterated with human-in-the-loop checks.</li>
                         <li>Added <strong>lightweight observability</strong> and acceptance criteria to catch regressions early.</li>
-                        <li>Orchestrated <strong>multi-step automations</strong> (n8n) and tuned retrieval (pgvector) to improve accuracy and latency.</li>
+                        <li>Orchestrated <strong>multi-step automations</strong> (n8n) and tuned retrieval to improve accuracy and latency.</li>
                     </ul>
                 </div>
                 <!-- Mocapay -->
@@ -143,12 +143,12 @@
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 sm:gap-4 text-center">
                     <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fab fa-python mr-2" aria-hidden="true"></i>Python</div>
                     <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-code mr-2" aria-hidden="true"></i>FastAPI</div>
-                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-brain mr-2" aria-hidden="true"></i>OpenAI / Claude (tool calling)</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-brain mr-2" aria-hidden="true"></i>OpenAI</div>
                     <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-search mr-2" aria-hidden="true"></i>RAG (LlamaIndex)</div>
-                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-database mr-2" aria-hidden="true"></i>Postgres + pgvector</div>
-                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-diagram-project mr-2" aria-hidden="true"></i>LangGraph / LangChain</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-database mr-2" aria-hidden="true"></i>Postgres</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-diagram-project mr-2" aria-hidden="true"></i>LangChain</div>
                     <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-network-wired mr-2" aria-hidden="true"></i>n8n orchestration</div>
-                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-clipboard-check mr-2" aria-hidden="true"></i>Eval & Guardrails (TruLens / DeepEval)</div>
+                    <div class="p-3 sm:p-4 rounded-xl skill-card"><i class="fas fa-clipboard-check mr-2" aria-hidden="true"></i>Eval & Guardrails</div>
                 </div>
             </div>
         </div>
