--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <header class="min-h-screen flex items-center justify-center animated-bg pt-20">
         <div class="text-center px-4 animate__animated animate__fadeIn max-w-3xl truncate-wrap">
             <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-4 floating leading-tight">Aishwarya Nayak</h1>
-            <p class="text-base sm:text-lg md:text-2xl mb-6 opacity-90 leading-relaxed">AI Engineer • 4 yrs SWE • Shipping reliable LLM features — agentic workflows, RAG, evaluation & guardrails</p>
+            <p class="text-base sm:text-lg md:text-2xl mb-6 opacity-90 leading-relaxed">AI Engineer • 4+ yrs • Shipping reliable LLM features — agentic workflows, RAG, evaluation & guardrails</p>
             <a href="#experience" class="glass-effect px-6 py-3 sm:px-8 sm:py-4 rounded-full font-semibold hover:bg-white hover:text-black transition-all duration-300 inline-block w-full sm:w-auto">Explore My Work</a>
         </div>
     </header>
@@ -65,7 +65,7 @@
             <div class="divider"></div>
             <div class="glass-effect p-6 sm:p-8 rounded-2xl space-y-5 sm:space-y-6 card mt-8">
                 <p class="text-gray-200 text-base sm:text-lg leading-relaxed truncate-wrap">
-                    I’m an <strong>AI Engineer</strong> with ~4 years in software and an <strong>M.S. in Data Science (SUNY Buffalo)</strong>. I turn LLM ideas into dependable product features: <strong>agentic automations</strong>, <strong>RAG</strong> with tight grounding, and <strong>lightweight evaluation + guardrails</strong> so behavior is predictable in production. I optimize for clarity, safety, and speed—small iterations, measurable outcomes, and features that stand up to real users.
+                    I’m an <strong>AI Engineer</strong> with 4+ years in software and an <strong>M.S. in Data Science (SUNY Buffalo)</strong>. I turn LLM ideas into dependable product features: <strong>agentic automations</strong>, <strong>RAG</strong> with tight grounding, and <strong>lightweight evaluation + guardrails</strong> so behavior is predictable in production. I optimize for clarity, safety, and speed—small iterations, measurable outcomes, and features that stand up to real users.
                 </p>
                 <ul class="list-disc list-inside leading-relaxed text-gray-200 space-y-2 text-base sm:text-lg">
                     <li><strong>AI Engineering:</strong> Prompt design, function/tool calling, RAG, agentic workflows, sensible fallbacks.</li>
@@ -86,7 +86,7 @@
                 <div class="glass-effect p-5 sm:p-6 rounded-2xl scroll-reveal card hover:shadow-2xl transition">
                     <div class="flex items-center justify-between flex-wrap gap-2">
                         <h3 class="text-xl sm:text-2xl font-bold text-blue-200"><i class="fas fa-robot mr-2 text-blue-400" aria-hidden="true"></i>Handshake — AI Engineer</h3>
-                        <span class="text-xs sm:text-sm text-gray-300">2025 - Present • Buffalo, NY</span>
+                        <span class="text-xs sm:text-sm text-gray-300">2025 - 2026 • Buffalo, NY</span>
                     </div>
                     <ul class="mt-3 sm:mt-4 list-disc list-inside text-gray-200 space-y-1.5 sm:space-y-2 text-sm sm:text-base">
                       <li>Built <strong>evaluation & guardrail harnesses</strong> for multimodal tasks: deterministic answer schemas, multi-run checks, and rubric tagging to cut variance and shorten review loops.</li>
@@ -175,7 +175,7 @@
     </section>
 
     <footer class="py-8 bg-gray-900 text-gray-400 text-center">
-        <p>&copy; 2025 Aishwarya Nayak. All rights reserved.</p>
+        <p>&copy; 2026 Aishwarya Nayak. All rights reserved.</p>
     </footer>
 
     <script>
